# rusty-boids

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO.md  example-config.toml  todo.md
benches/: flocking_system.rs
src/: .system.rs.swo  app.rs  boids.rs  config.rs  event.rs  fps.rs  glx.rs  lib.rs  main.rs  render.rs  system.rs
