[package]
name = "aproxiflock"
version = "0.1.0"
authors = ["James Green <jagreen@thoughtworks.com>"]
edition = '2018'

[dependencies]
gl = "0.11.0"
glutin = "0.19.0"
cgmath = "0.15.0"
rand = "0.3.16"
toml = "0.4"
serde = "1.0.45"
serde_derive = "1.0.45"

[dependencies.clap]
version = "2.29.0"
default-features = false

[dev-dependencies]
criterion = "0.2.7"

[[bench]]
name = "flocking_system"
harness = false

[profile.release]
lto = true
incremental = false

[lib]
name = "aproxiflock"
