[package]
name = "aproxiflock"
version = "0.1.0"
authors = ["James Green"]
edition = '2021'

[dependencies]
gl = "0.14.0"
glutin = "0.30.1"
winit = "0.27.5"
cgmath = "0.18.0"
rand = "0.8.5"
toml = "0.5.9"
serde = "1.0.147"
serde_derive = "1.0.147"
raw-window-handle = "0.5.0"

[profile.release]
lto = true
incremental = false

[lib]
name = "aproxiflock"
